added oscars routes in docs.json and added JSDocs above reviews routes
